# roundcube-embedded

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CD.yml
docker/: Caddyfile  Dockerfile.api  Dockerfile.web  Dockerfile.webfake  Dockerfile.webmail  Dockerfile.webtimeout  compose.yml  nginx.conf
site/: index.html
site/fake-page/: index.html
site/timeout/: index.html
site/webmail/: index.html
src/: __main__.py
